# fog-of-chess

./: .env.example  Cargo.toml  README.md
bindings/board_commitment_contract/: README.md  package-lock.json  package.json
bindings/board_commitment_contract/src/: index.ts
contracts/fog-of-chess/: Cargo.toml
contracts/fog-of-chess-zk/: Cargo.toml
contracts/fog-of-chess-zk/host/: Cargo.toml
contracts/fog-of-chess-zk/host/src/: main.rs
contracts/fog-of-chess-zk/methods/guest/: Cargo.toml
contracts/fog-of-chess-zk/methods/guest/src/: main.rs
contracts/fog-of-chess/src/: lib.rs
fugitive-king-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fugitive-king-frontend/src/: App.tsx  config.ts
fugitive-king-frontend/src/games/fugitive-king/: FugitiveKingGame.tsx  LanternChess.jsx  LeaderboardPanel.jsx  LoadingScreen.jsx  SpectatorPanel.jsx  StakeModal.jsx  bindings.ts  chessLogic.ts  constants.ts  fugitiveKingService.ts  pointsContract.ts  spectatorPool.ts  stakingContract.ts  supabaseClient.ts  useChessAI.ts  useGameLogic.ts  useLeaderboard.ts  useSoundSystem.ts  useSpectatorBetting.ts  useStaking.ts  zkServices.ts
fugitive-king-frontend/src/hooks/: useWallet.ts
fugitive-king-frontend/src/services/: chessService.ts
fugitive-king-frontend/src/utils/: constants.ts
