[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
hex = "0.4.3"
